<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/main_appbar"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="안심귀가 현황판"
                style="@style/Title3"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </com.google.android.material.appbar.MaterialToolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <!--    귀가 현황판 - 서울 시 -->

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/main_board"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/main_appbar"
        app:layout_constraintBottom_toTopOf="@id/gl_board_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="@dimen/default_end_margin"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="8dp"
        android:layout_height="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/main_board_si"
                android:text="서울시"
                style="@style/Title1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/default_end_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/main_board_si_current"
                android:text="여성 안전 귀가 현황"
                style="@style/Title3"
                app:layout_constraintTop_toBottomOf="@id/main_board_si"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:text="%d명"
                style="@style/Title1"
                android:textSize="40sp"
                app:layout_constraintTop_toBottomOf="@id/main_board_si_current"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/gl_inner_50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_inner_50"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent=".6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/gl_inner_vertical_50"
                android:orientation="vertical"
                app:layout_constraintGuide_percent=".5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <!--    현재 같은 동에서 귀가중인 사람들의 현황판 -->
            <TextView
                android:id="@+id/current_number_title"
                android:text="@string/current_location_state_msg"
                app:layout_constraintTop_toBottomOf="@id/gl_inner_50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/gl_inner_vertical_50"
                style="@style/Body1"
                android:textAlignment="center"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="@id/gl_inner_vertical_50"
                app:layout_constraintTop_toBottomOf="@id/current_number_title"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textSize="30sp"
                android:text="@string/current_location_state_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:id="@+id/arrived_state_title"
                android:text="@string/arrived_state_title"
                style="@style/Body1"
                app:layout_constraintTop_toBottomOf="@id/gl_inner_50"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/gl_inner_vertical_50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_arrived_list"
                app:layout_constraintTop_toBottomOf="@id/arrived_state_title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/gl_inner_vertical_50"
                app:layout_constraintBottom_toBottomOf="parent"
                android:padding="8dp"
                tools:listitem="@layout/arrived_people_view_holder"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>


    <!--    채팅방 입장하기 버튼-->
    <Button
        android:id="@+id/btn_enter_group_chat"
        app:layout_constraintTop_toBottomOf="@id/gl_board_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="안심 그룹채팅"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <!--    floating action button (출발, 도착, 귀가 루트 작성하기)-->

    <!--    guidelines -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_board_bottom"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_gravity="bottom"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:text="귀가완료"
        android:id="@+id/end_fab"
        app:icon="@drawable/ic_location"
        android:visibility="invisible"
        android:layout_marginBottom="210dp"
        android:layout_gravity="bottom|center"
        app:backgroundTint="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:text="귀가시작"
        android:visibility="invisible"
        android:id="@+id/start_fab"
        app:icon="@drawable/ic_baseline_directions_walk_24"
        android:layout_marginBottom="150dp"
        android:layout_gravity="bottom|center"
        app:backgroundTint="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/edit_fab"
        android:visibility="invisible"
        android:text="정보작성"
        android:layout_marginBottom="90dp"
        android:layout_gravity="bottom|center"
        app:backgroundTint="@android:color/white"
        app:icon="@drawable/ic_baseline_edit_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/main_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_happy_face"
        app:layout_anchor="@id/bottomAppBar"
        app:backgroundTint="@android:color/white"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>